--- a/week5/bookCatalog.html
+++ b/week5/bookCatalog.html
@@ -88,7 +88,7 @@
     <script>
       function loadXML() {
         const xhr = new XMLHttpRequest();
-        xhr.open("GET", "bookCatalog.xml", true);
+        xhr.open("GET", "bookcatalog.xml", true);
         xhr.onreadystatechange = function () {
           if (xhr.readyState === 4 && xhr.status === 200) {
             const xml = xhr.responseXML;
